SM模块 : 增加astree用于遍历语法分析树

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,4 +52,5 @@ add_executable(YourSQL
         src/Parser/lex.yy.cpp
 #        src/Parser/yacc.tab.cpp
         src/Parser/yacc.tab.h
-        )
+        src/Parser/astree.cpp
+        src/Parser/astree.h)
