Add: SM create test & change bfm close
It's opaque that bfm only can close all file. Adding a new method for bfm to write only one file back to disk. No extra information is recorded in bfm.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,11 +51,13 @@ add_executable(YourSQL
         src/SM/SM_PRIVATE.h
         src/SM/SM_Manager.cpp
         src/SM/SM_Manager.h
-        src/Parser/parser.h
+#        src/Parser/parser.h
 #        src/Parser/lex.yy.cpp
 #        src/Parser/yacc.tab.cpp
 #        src/Parser/yacc.tab.h
-        src/gtestcase/IX1.cpp)
+        src/gtestcase/IX1.cpp src/gtestcase/SM1.cpp
+        src/gtestcase/RM1.cpp
+        )
 
 #set(LIBRARIES test)
 set(LIBRARIES
