QL模块：新增对RM_Filescan的测试

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,4 +57,4 @@ add_executable(YourSQL
         src/QL/QL_PRIVATE.h
         src/QL/QL_PUBLIC.h
         src/QL/QL_Manager.h
-        src/QL/QL_Manager.cpp)
+        src/QL/QL_Manager.cpp src/RM_Test/test_scan.cpp)
