Parser : 加入Exit; ASTree : 提供接口可以进行单步测试

--- a/src/gtestcase/SM_Parser3_1.in
+++ b/src/gtestcase/SM_Parser3_1.in
@@ -7,3 +7,4 @@ create table z4 (col1 int, col2 int);
 create table z5 (col1 int, col2 int);
 create table z6 (col1 int, col2 int);
 show tables;
+exit;
