--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ SET(SOURCE
         src/Printer/Printer.cpp
         src/Printer/Printer.h
         src/Printer/StdoutPrinter.cpp
-        src/Printer/StdoutPrinter.h src/QL/Selector.cpp src/QL/Selector.h src/utilities.cpp src/QL/SelectResult.cpp src/QL/SelectResult.h)
+        src/Printer/StdoutPrinter.h src/QL/Selector.cpp src/QL/Selector.h src/utilities.cpp src/QL/SelectResult.cpp src/QL/SelectResult.h src/Regex/Regex.cpp src/Regex/Regex.h)
 
 
 SET(GTEST 1)
@@ -73,6 +73,7 @@ IF(GTEST)
             src/gtestcase/QL1.cpp
             src/gtestcase/RM1.cpp
             src/gtestcase/SM1.cpp
+            src/gtestcase/Regex1.cpp
             )
     set(LIBRARIES gtest_main)
     # for QL print control
