Fix: add quotas to data in test

--- a/src/gtestcase/QL_AGG1.in
+++ b/src/gtestcase/QL_AGG1.in
@@ -3,23 +3,23 @@ use db1;
 create table tb1 (name varchar, birth date, age int, mark int);
 
 insert into tb1 values 
-	('Link', 1995-10-20, 23, 90),
-	('Marth', 1992-01-02, 26, 70),
-	('Lucina', 1994-01-20, 24, 85),
-	('Link', 1995-10-20, 23, 80),
-	('Marth', 1992-01-02, 26, 60),
-	('Pikachu', 2000-09-29, 18, 77),
-	('Pikachu', 2000-09-29, 18, 78),
-	('Inklink', 2005-06-13, 14, 78),
-	('Link', 1995-10-20, 18, 76),
-	('Pikachu', 2000-09-29, 18, 86),
-	('Inklink', 2000-09-29, 14, 78),
-	('Link', 1995-10-20, 18, 95),
-	('Lucina', 1994-01-20, 24, 80),
-	('Cloud', 2001-12-25, 17, 86),
-	('Inklink', 2005-06-13, 14, 78),
-	('Marth', 1992-01-02, 26, 59),
-	('Link', 1995-10-20, 18, 74);
+	('Link',   '1995-10-20', 23, 90),
+	('Marth',  '1992-01-02', 26, 70),
+	('Lucina', '1994-01-20', 24, 85),
+	('Link',   '1995-10-20', 23, 80),
+	('Marth',  '1992-01-02', 26, 60),
+	('Pikachu','2000-09-29', 18, 77),
+	('Pikachu','2000-09-29', 18, 78),
+	('Inklink','2005-06-13', 14, 78),
+	('Link',   '1995-10-20', 18, 76),
+	('Pikachu','2000-09-29', 18, 86),
+	('Inklink','2000-09-29', 14, 78),
+	('Link',   '1995-10-20', 18, 95),
+	('Lucina', '1994-01-20', 24, 80),
+	('Cloud',  '2001-12-25', 17, 86),
+	('Inklink','2005-06-13', 14, 78),
+	('Marth',  '1992-01-02', 26, 59),
+	('Link',   '1995-10-20', 18, 74);
 
 select tb1.name, max(tb1.mark), min(tb1.mark), sum(tb1.mark)
 	from tb1 
