Fix: correct comparison sequence in index

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ else()
             )
     add_compile_definitions(OutputExcutedOperation=OPEN)
     add_compile_definitions(OutputLinearIndex=OPEN)
-    #add_compile_definitions(OutputFileOperation=OPEN)
+    add_compile_definitions(OutputFileOperation=OPEN)
 endif()
 
 add_executable(YourSQL
