Add: search on tree for index and pruning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ SET(SOURCE
         src/Parser/parsererror.h src/Printer/CsvPrinter.cpp src/Printer/CsvPrinter.h)
 
 
-#SET(GTEST 1)
+SET(GTEST 1)
 
 IF(GTEST)
     SET(SOURCE ${SOURCE}
